--- a/Whole_TF_ReLayNet.ipynb
+++ b/Whole_TF_ReLayNet.ipynb
@@ -2,21 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'scipy.io'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-06e0845f18d2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mscipy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mio\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mscio\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'scipy.io'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import scipy.io as scio\n",
     "import numpy as np    \n",
@@ -37,11 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-5e85e2f6c1ed>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mActivation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mConv2D\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mMaxPooling2D\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlayers\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mInput\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras.layers import Activation\n",
@@ -64,21 +62,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'keras'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-aeb2e4d0e8d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mkeras\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcallbacks\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mReduceLROnPlateau\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mCSVLogger\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mEarlyStopping\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mModelCheckpoint\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'keras'"
+     ]
+    }
+   ],
    "source": [
     "from keras.callbacks import ReduceLROnPlateau, CSVLogger,EarlyStopping,ModelCheckpoint"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io as scio\n",
@@ -95,10 +101,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def atoi(text) : \n",
@@ -107,10 +111,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def natural_keys(text) :\n",
@@ -119,10 +121,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_info(filenames, ext):\n",
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "600\n"
+      "0\n"
      ]
     }
    ],
@@ -174,14 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "H2_N02047_RVS_1_334_9.png\n"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-11-cef82e2e6009>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilenames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
    ],
@@ -191,10 +195,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "raw_images = get_info(filenames, '.png')"
@@ -202,28 +204,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f301bcc16d8>"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAEYAAAD8CAYAAADKf9KXAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMi4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvhp/UCwAAFPJJREFUeJztnV9sZFd9xz8/2/c68R0SX288k2hn\nWtY0bFopq5RdQRCVQG1a0ahqeCASvEARUqRCK/pUoiK16hv0obSoVWmkolKpKlC1VRFqRSNK1D5s\n+bOQxNDYEI9RPCE74+I7lLkWvjP26cPc39k7Xp/19cazO0PPVxr5zrln7tzz9e/f+Z3fuSPGGDyu\nx8ztvoFJhSfGAU+MA54YBzwxDnhiHBgLMSLydhFZF5EXReTJcXzHuCGnHceIyCzwHeCXgRbwNeDd\nxpj/PtUvGjPGITFvBF40xjSNMRnwGeCxMXzPWDE3hmueBbYK71vAm270ARG5peG3MUaO6zMOYo76\n0usGLiJPAE+M4ftPBeMgpgU0Cu/rwPcPdzLGPAU8BbdeYspgHDbma8D9InJORELgXcDnx/A9Y8Wp\nS4wxZiAivwV8EZgFPmWM+fZpf8+4ceru+qZuYgKNr498HfDEOOCJccAT44AnxgFPjAOeGAc8MQ54\nYhzwxDjgiXHAE+OAJ8YBT4wDnhgHPDEOeGIc8MQ44IlxwBPjgCfGAU+MA54YBzwxDnhiHPDEOOCJ\nccAT44AnxgFPjAOeGAc8MQ54YhzwxDhwLDEi8ikR6YjItwptSyLytIh8N/8b5+0iIp/IS+WfF5E3\nlLmJu+66i4sXL1Kr1ajVakRRRBRFNz+qU0AZiflr4O2H2p4EvmSMuR/4Uv4e4FeB+/PXE8BflLmJ\nubk5qtUq9Xqdc+fOUavVOHfuHABxHLOyskKtVitzqVPDsVWbxpj/EJHXHmp+DHhbfvxp4Bngw3n7\n35hhxeN/iciiiNxnjHnlRt9RqVS4dOkSQRCwurpKv99nZWWFbrdLrVYjCAI6nc4IOUmSEAQBaZra\ntjAMybLsuCGVws2Ws9Z0sMaYV0SkmrcfVS5/FriOmGJl+F133UWWZfR6PcIw5OLFi2RZxuOPP04c\nx/T7fZ5//nkqlQrtdptarWb7v+51ryNJEra2tgjDkCAIWF9fByBNU0tqlmXEcUySJGMlxoVS5fIw\nWhneaDRMlmV2IAAPPPAAaZpaKYnjmK2tLer1OlEUkaYpKysrJElibVIcx9ZO9ft9AHq9HrVajbW1\nNbIs49lnny01kJslpq0qIiL3AZ28vVS5/GHMzMxQq9VI05Q4jrly5QpJkpBlGc1m06qHSk+z2WRl\nZYVWq2UlIcsyoiiyfavVKmEYkiQJaZry1re+lcuXL5c26jfrrj8PvDc/fi/wz4X29+Te6WHgh8fZ\nF4D9/X3a7TbtdpskSahWq6RpShiGliwY2pVer0ccx6RpSpIkI3ZnfX2ddrvNysoKcRwThiFxHFOv\n19na2uKRRx4hDMNSAzxWYkTk7xga2ntEpAX8AfBR4HMi8n7gJeDxvPu/AI8CLwK7wPvK3ES/37eD\nh6ExzrKMLMuoVqv0+30rUUEQkCSJHXSSJCRJwsrKCgC1Wo1Wq0Ucx9Ye6fmy9gXKeaV3O0790hF9\nDfDB0t+eIwgC+v0+/X6fdrttbUgcx6yurnLx4kXa7TYwJK3RaNDr9WxbvV63xlm9VbPZZGdnB8CS\nHkURIsdWywMTEvlmWUaSJJYUuOZ6H3jgAbIso9FoWK/TbDZpNpukaUqlUmFtbQ3Aqk9RAtXuJElC\nv99nb2+v1D1NBDGqHioplUqFKIro9/v0ej36/b493+l0LHk6+FqtRhzHNJtNqy5RFFnPpoSpCpbB\nRBBjjKFer9NoNIiiyKpJr9cDsJ5GPZXaF41l0jS1UqISEoahtVX9ft8GgmV320wEMYPBgCzLaLfb\nVCoVwjC0UtBoNOz8qd/vE0URzWaTSqUCQKfTIY5ja4jV1StB6qEefPBBHnzwwdI2Zhxb/06M2dlZ\nYKgSW1tbdqBqGzRuUdVR+6NTB3X1tVqNixcvkqYpa2tr9howlLY4ju13HYeJkJj9/X36/T5ZllGr\n1ahUKjbq7fV61hX3ej2iKLLuOAgCqzY6TVD10mBQbUyWZWxtbbG/v1/qniaCGBGxgwQsQWoXNKpV\n6Tl//jytVguAVqs1MplUyeh0OiPRs8Y7U0WMMWYkwAvDkF6vRxAEI4GcehSNgHW+VPQ8GhEDViXV\nNsFw+lEGE0HM7OwsnU6HNE3thFCl43AaIQxDLl++bI2zzshValQVe70eOjHd2Niwn526AE9jmMuX\nL9Nut61hTZKE1dVVqwpwbeatxllJiaKIdrttVVGTXBcuXCgdvygmwivNzMxY2wDDuZOmHzT81zgl\nyzLrqmE4Reh0OgRBYNWp3W4Tx7GdfSdJYmOkwWBQ7p5Of5gnx/7+/sh/VIlotVrXBXmqPqom6oEq\nlYqdK+mM+/z587a91+vR6XSmK8ATETvwnZ0dayzTNKXVarG2tmbTEGtra5ZElZ4oigiCgCAIrI0q\nEgdD+1Kv15mbK6ckE0HM3NycjVYvXbpkbYXGMGovip6pqFLqji9fvmzdtp5Tw6wqVdZdT4SNGQwG\nNojT3G0x0Ct6mTAMrVvWgC6KIiqVik1nqvRpIKifS9N0uogxxlw389WBq0EuJqXUrqgk6GRxZ2eH\nMAxHcsDqzjVqLouJUCVNbeoggJHjYuZNvVUxmQVD4i5cuECtVqPdblv7otk/JWyq4pjZ2Vk7q9ZZ\nNmCP1QWrdCRJYl2xpjs19Ndod21tjUqlMkLkSVKbE0GM/hfV86j71dhGB6SGdWVlxU4XgJHJYqvV\nslKi04Z2u22zfGUxMcQUk05wbT0oSRLOnz9/nRtWKVLo5w5n98IwpNls2rWmsmmHiTG+6jna7Tb1\net0OWteRDhtjjYSVJE186/IJXFtt0PdhGHJwcFDqniaGmEajwcbGBvV6HYClpSU7aMB6mWJ6U22Q\nSpcGhprE0r7FGGiqjO9gMOCZZ56xSyjF5VUN9tI0pdlsWm8Ew8Cu0WhYO6KGV91zr9ezsZDmg3/8\n4x+XuqeJIGZmZoZ7772XKIrY2dnhueees4PS/7TmZzQxpSF+McDb2NiwC/9FL6fBXZqm0zUl2N/f\np9frWRIajeHydzGoW1pashGxLswpKYCNiDX/qzkYlRyVvLKYCGKAkVTm0tISrVbL5loajYaNR4op\nUMD2U1VSm6KGd2lp6brzZTAxxCRJYr3R1tYWQRDY6HdjY2Mkf7uzs0MQBGxubto8TK/Xs3lgjYW0\nLqY4FZiqtMPBwQE7OzskSWKNpS61rq6uWhuh6nLvvfeSpqn1YMUcjKqYqk9xdTLLMit5x2EiiBER\n5ufnbayiN68xiA60mN5UldDPqP1QSdHlmCiKaDQabG5uEobhdK0SAOzt7bG3t2dXGYs1MJqFU490\n5coVG98UXbRGxQBXr161br/ZbAKwuro6XasExhibiy1WQQGWLE1a6d9Op8PVq1dJ05TNzU2bm1H7\nA1hV2tvbo1qtUq1WnfdwGBMR+R4cHFCtVu2cRsnQgh+NSRR7e3t27qSz7PX1dWtkl5aWmJ+fB7Dr\n3jozL5sMnwhiZmdnR2bWCv1vwzAeGQwG9r+uK40a6C0sLACwu7vLzs4Ou7u7I8sqmvs9NVUSkYaI\nfFlEXhCRb4vIh/L2U6sO10TVwsKClZSrV69aEoIgsKR0Oh12dnZYXFwcSWECdLtdFhYWbF8lI01T\nGyCWlZhjn86aV2XeZ4z5hoi8BrgCvAP4DWDHGPPR/EnysTHmwyLyKPDbDGvx3gT8qTHmho/Gnp+f\nN69//evpdrs2ia02o1Kp2DB+d3fXkqGGNQgCFhcX2d3dBbCSs729bc8VjffGxgZZlr36R2PnVZda\n7PwjEXmBYVHzqVWHz83Nsbu7a2fHGsxpNDwYDEYWy8IwZHFx0aYkALuM0m63WVxcJIoiKz0a/CmZ\nZXAiG5OXzv888BVOoTpcoTe8vLxsy1k1qANGIld14ZrPPXv2LJubmywuLtpr7e7u2qpNGBpgPX/q\nleEiUgH+AfgdY8z/3iCvceKHqc/Oztp1n7Nnz9rau/n5ebvepJIAcPbsWas6qn6qOjrz1lxxGIbs\n7e3Z/mUTVaVMtIgEDEn5W2PMP+bN7dz+qB06UXW4MeYpY8wlY8wlTTfGcUy327Weqd1us7y8bGvs\nut0uQRCwvb09UmenErW4uDhSBgJDNZ2fn7e26dTSDjIUjb8CXjDG/HHh1KlVh8/MzIzEKUmSMD8/\nT61WY3t7eyQloS49TVMWFhZGot3BYMD58+dt3XCWZbz88svAtUR7WYkp45V+AfhPYBXQq/4eQzvz\nOeCnyKvDjTE7OZF/xnCP0y7wPmPM12/0HXfeeae555577MBhuCKpqFQq1Ot1u7Kos25NYRaJ0CXZ\nYsFRmqYsLy8zGAx46aWXSNP0WK80EQ9Tn5ubMw899NBI2VixNjcIAuu2d3d3R2qCi4a5OMsukqHL\nvoVpxm35JYsTQyNfzckoCd1ul3q9ThAEdLtdBoOBzeLNzc3R7/etlKntUG+kdmZ5edm6fZ1ClMFE\nTCL39/eJosjmcLMss15kb2+P9fV1er0ec3Nz9vzm5uaRq4tXrlyxpa9xHLO7u2uXZwHuuOOOUvc0\nEaoUBIE5c+aMtRVFNdFBqftVu1LcK6B9Ndnd7Xbp9/ssLy9bglUtf/CDH9Dv96dDlVRiisXKOhBV\nA30VJ5nFjRlqd4ARVSwiy7LTjWPGjfn5eZrNppUO3SAaRZGdSOq54iaMKIrsKmMQBFSrVTu53N7e\ntgGhYuqqHYCRtR+FlrTOzc3ZtSOVLDWiGva3Wi263S7dbteuFGxvb1Ov1+010zQtnXaYCFUaDAac\nOXPGrlsf3rvU7XZt5UNxGVbjlYWFBbsoB8MIWCeculKgRrrsRHJiJEYHrvUu6rbhWplHcZetkpYk\nCS+//LJdfUzTlN3dXUtSq9Wy0nj27NnSU4KJ8Eqzs7Pm7rvvBq7tLFHjC8OtfWEYsrW1ZUN7Dfq0\ndEQX/ZXMra0tu+hW3KieJMn0/FrOwcGBJaIY1lerVZvQ1ooGNbrFhfxiwSJgVxZUapTgqat2KELX\niIouWtWmaESL9XnF3SlKghYw6pRCY6GyxEyEKs3MzJjD91Ekozjz1sxe0VDDtUX94p7IYqVDtVql\n1WoxOzvLYDCYjgBvZmbGls0XVxgVuhivbcWqBZ1VK4o79ov7nZTgU0uG3woc/qmyw0/1KJZ6FOuB\n1QArUUXDXdzcVSw2yv8J05F2EBFTvPkiiiXyxeMbQTeWFjdmqIqJCAcHB9PhlUTkyMS3HusAi3sg\nD6M4gz4MjZGiKCpdBoIx5ra/GCbLTRRFBjC1Ws0eAyYMQ3tcfIVhaPu5+hTPxXFsyJ+0cNxrIiQG\nGJGCwyVhKjHFPnp8lPodRjG4m7o4puhF4PoBHzbIhwuAXCpWRBzHpVVpYozvSfofJqnYdpQRL/af\nKuNbRJmnlx1VLnZ4TVtxmMSpqsEr6n0x3XAUXEu3h3HYo534niZBlWZnZ42mHI9SkzI4yefKzK4n\ngphb9SO9St7UpB0O47CKuLxN2a18ZSPmIiZWYlxThNPA1EoMlAvcwC1NrvayyfCJlZhxYqok5rio\n9dX2Pyl+oiXG5cK9u3ZgqlRp0uCJccAT40CZ4sQ7ROSrIvJcXjL/h3n7ORH5Sl4y/1kRCfP2+fz9\ni/n51453CGNCibSjAJX8OGBYlPgww8LEd+XtnwR+Mz/+APDJ/PhdwGfLpjZv1atUuvWEudkF4BsM\n9wj8DzCXt78Z+GJ+/EXgzfnxXN5Ppo2YsgXQsyLyLMMi56eBDaBrjNHVKy2Lh0LJfH7+h8CZI675\nhIh8XURuWOp6u1CKGGPMvjHmIYZV3m8EfvaobvnfUiXzplAZXvZmj8K4IuATeSVjTJfhLpOHgUUR\n0SXeYlm8LZnPz98N7JzGzR6Fm83QHYcyXmlZRBbz4zuBR4AXgC8D78y7HS6Z11L6dwL/biYhvD4p\nShjcC8A3geeBbwG/n7evAF9l+OD0vwfm8/Y78vcv5udXptEr+bmSAz7ydcAT48BUEnMrfntpKok5\nyabPm4U3vg5MpcTcCnhiHPDEOOCJccAT44AnxgFPjAOeGAc8MQ54YhzwxDjgiXHAE+OAJ8YBT4wD\nnhgHPDEOeGIc8MQ44IlxwBPjgCfGAU+MA54YBzwxDnhiHPDEOOCJcaA0MXlJ6zdF5Av5+5/oyvCT\nSMyHGBYlKj4GfNwYcz+QAO/P298PJMaYnwE+nvebPpSsCK8DXwJ+EfgCw1peXxkO/Anwu1x70PEZ\n/r9XhovIrwEdY8yVYvMRXW9LZfi4UObhXW8Bfj3/IYY7gLsYStCiiMzlUnFUZXjrVlSGjw0n3H3y\nNuAL+fHfM7ot5wP58QcZ3ZbzuWksgH41xPjK8HHDFydOETwxDnhiHPDEOOCJccAT44AnxgFPjAOe\nGAc8MQ54YhzwxDgwEQ9THxeOmiBfulQuL+YlxgFPjAOeGAd+om1M2eeDHwUvMQ54YhzwxDjgiXHA\nE+OAJ8YBT4wDnhgHPDEOeGIc8MQ44IlxwBPjgCfGAU+MA54YBzwxDpR9AvT3RGRVRJ7VulwRWRKR\np/OS+adFJM7bRUQ+kZfMPy8ibxjnAMaGkkWJ3wPuOdT2R8CT+fGTwMfy40eBf2VY7/sw8JVpLE58\nNcSsA/flx/cB6/nxXwLvPqrfNBFT1sYY4N9E5IqIPJG31YwxrzD8pleAat5uS+ZzFMvpLSa9ZL7s\nKsFbjDHfF5Eq8LSIrN2gb+mSeeApuPXlrGVQ9inz38//doB/Yvik+baI3AeQ/+3k3e3D1HMUy+mn\nBmU2WUQi8ho9Bn6F4bPDiw9Nfy+jD1N/T+6dHgZ+qCo3VShheFeA5/LXt4GP5O1nGO5h+m7+dylv\nF+DPGf6owypwaRq90qSUzP+Iofc6bdzDcCNZET9tjFk+7oOTskS7bsawb0lEvn6z1/VTAgc8MQ5M\nCjFPTdp1J8L4TiImRWImDredGBF5u4is52mKJ1/FdUqnRkqhTLAzrhcwyzAQXAFChkHkz93ktb5H\nydTIac6ux4U3Ai8aY5rGmAz4DPDYKV7/MeDT+fGngXeU/eDtJqZUiqIkTpIaORa3O/ItlaIoiZOk\nRo7F7ZaYU0tRnDA1cixuNzFfA+7Pn0UTMtzZ//mTXuQmUiPH43Z6pdxbPAp8h6F3+shNXuNEqZGp\nSTtMIm63Kk0sPDEOeGIc8MQ44IlxwBPjgCfGAU+MA/8H6f9/v3B1naQAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<Figure size 432x288 with 1 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-6c7b2657d5c8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mraw_images\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcmap\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"gray\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
     }
    ],
    "source": [
