--- a/Resize_Whole_Data.ipynb
+++ b/Resize_Whole_Data.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import scipy.io as scio\n",
@@ -18,6 +16,7 @@
     "import cv2\n",
     "from scipy.misc import imsave\n",
     "from helper import *\n",
+    "from create_labels import *\n",
     "\n",
     "%matplotlib inline\n",
     "plt.rcParams['figure.figsize'] = (10.0, 8.0) # set default size of plots\n",
@@ -33,307 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def to_rgb(color):\n",
-    "    r,g,b = color\n",
-    "    return (int(r),int(g),int(b))\n",
-    "\n",
-    "# Source: https://stackoverflow.com/questions/9694165/convert-rgb-color-to-english-color-name-like-green-with-python\n",
-    "def closest_colour(requested_colour):\n",
-    "    min_colours = {}\n",
-    "    for key, name in wb.css3_hex_to_names.items():\n",
-    "        r_c, g_c, b_c = wb.hex_to_rgb(key)\n",
-    "        rd = (r_c - requested_colour[0]) ** 2\n",
-    "        gd = (g_c - requested_colour[1]) ** 2\n",
-    "        bd = (b_c - requested_colour[2]) ** 2\n",
-    "        min_colours[(rd + gd + bd)] = name\n",
-    "    return min_colours[min(min_colours.keys())]\n",
-    "\n",
-    "def get_colour_name(requested_colour):\n",
-    "    try:\n",
-    "        closest_name = actual_name = wb.rgb_to_name(requested_colour)\n",
-    "    except ValueError:\n",
-    "        closest_name = closest_colour(requested_colour)\n",
-    "        actual_name = None\n",
-    "    return actual_name, closest_name\n",
-    "\n",
-    "# Source Source: https://stackoverflow.com/questions/45043617/count-the-number-of-objects-of-different-colors-in-an-image-in-python\n",
-    "def find_colors(file_name):\n",
-    "    from skimage import io, morphology, measure\n",
-    "    from sklearn.cluster import KMeans\n",
-    "\n",
-    "    img = io.imread(file_name)\n",
-    "\n",
-    "    rows, cols, bands = img.shape\n",
-    "    X = img.reshape(rows*cols, bands)\n",
-    "\n",
-    "\n",
-    "    kmeans = KMeans(n_clusters=6, random_state=0).fit(X)\n",
-    "    labels = kmeans.labels_.reshape(rows, cols)\n",
-    "\n",
-    "    for i in np.unique(labels):\n",
-    "        blobs = np.int_(morphology.binary_opening(labels == i))\n",
-    "        color = np.around(kmeans.cluster_centers_[i])\n",
-    "        actual_name, closest_name = get_colour_name(to_rgb(color))\n",
-    "        count = len(np.unique(measure.label(blobs))) - 1\n",
-    "        \n",
-    "        print('Color: {}, RGB: {}  >>  Objects: {}'.format(closest_name,color, count))\n",
-    "        \n",
-    "def pixel_colors(file_name):\n",
-    "    '''\n",
-    "    Creating a dictionary of colours to see what colors are in images.\n",
-    "    '''\n",
-    "    from skimage import io\n",
-    "    if type(file_name) == str:\n",
-    "        img = io.imread(file_name)\n",
-    "    else:\n",
-    "        img = file_name\n",
-    "    \n",
-    "    new_img = np.copy(img)\n",
-    "    rows, cols, bands = new_img.shape\n",
-    "    \n",
-    "    dict_of_colours = {}\n",
-    "    for row in range(150,350):\n",
-    "        if row % 25 == 0:\n",
-    "            print(row)\n",
-    "        for col in range(0,50):\n",
-    "            pixel_color = new_img[row][col]\n",
-    "            actual, close = get_colour_name(pixel_color)\n",
-    "            if actual != None:\n",
-    "                if actual in dict_of_colours:\n",
-    "                    dict_of_colours[actual] += 1\n",
-    "                else:\n",
-    "                    dict_of_colours[actual] = 1\n",
-    "                list_of_colors.add(actual)\n",
-    "            else:\n",
-    "                if close in dict_of_colours:\n",
-    "                    dict_of_colours[close] += 1\n",
-    "                else:\n",
-    "                    dict_of_colours[close] = 1\n",
-    "\n",
-    "    return dict_of_colours"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "import webcolors as wb\n",
-    "import numpy as np\n",
-    "from skimage import io\n",
-    "from skimage.color import rgb2lab, deltaE_cie76\n",
-    "from PIL import Image\n",
-    "\n",
-    "# Source: https://stackoverflow.com/questions/44428315/similar-color-detection-in-python\n",
-    "\n",
-    "# Blurring image \n",
-    "def blur_image(img, b):\n",
-    "    if b == \"average\":\n",
-    "        kernel = np.ones((3,6),np.float32)/25\n",
-    "        blurred = cv2.filter2D(img,-1,kernel)\n",
-    "    elif b == \"gaussian\":\n",
-    "    # Gaussian Blur\n",
-    "        blur=cv2.GaussianBlur(img,(13,13),0)\n",
-    "        blurred=cv2.cvtColor(blur,cv2.COLOR_BGR2HSV)\n",
-    "    elif b == \"bilateral\":\n",
-    "    # Bilaterial Filter\n",
-    "        blur=cv2.bilateralFilter(img,4,25,25)\n",
-    "        blurred=cv2.cvtColor(blur,cv2.COLOR_BGR2HSV)\n",
-    "    return blurred\n",
-    "\n",
-    "def turn_array(rgb):\n",
-    "    '''\n",
-    "    turn rgb into np.array\n",
-    "    '''\n",
-    "    return np.uint8(np.asarray([[rgb]]))\n",
-    "\n",
-    "def turn_rgb_2_lab(color, lab):\n",
-    "    '''\n",
-    "    Convert RGB to CIE 1976 L*a*b*\n",
-    "    '''\n",
-    "    return deltaE_cie76(rgb2lab(color),lab)\n",
-    "\n",
-    "def rgb_to_id(rgb, threshold, color, ids, lab):\n",
-    "    '''\n",
-    "    Convert rgb to id\n",
-    "    '''\n",
-    "#     print(get_colour_name(color), color, ids)\n",
-    "    color_3d = turn_array(color)\n",
-    "    dE_color = turn_rgb_2_lab(color_3d, lab)\n",
-    "    rgb[dE_color < threshold] = ids\n",
-    "#     rgb[dE_color < threshold] = color\n",
-    "\n",
-    "    return rgb\n",
-    "\n",
-    "def ref_colour(rgb):\n",
-    "# def ref_colour():\n",
-    "    '''\n",
-    "    Finding colours within a range of the colour input\n",
-    "    input = pixel\n",
-    "    '''\n",
-    "    rgb = io.imread('https://i.stack.imgur.com/npnrv.png') # to show where the images overlap\n",
-    "    new_rgb = np.copy(rgb)\n",
-    "    \n",
-    "    lab = rgb2lab(new_rgb)\n",
-    "    \n",
-    "    threshold = 15  \n",
-    "    \n",
-    "    # Black = Grey \n",
-    "    black = [0, 0, 0]\n",
-    "    dimgrey = [105, 105, 105]\n",
-    "    darkslategrey = [47, 79, 79]\n",
-    "    lightgrey = [211, 211, 211]\n",
-    "    gainsboro = [220, 220, 220]\n",
-    "    grey = [128, 128, 128]\n",
-    "    lightslategrey = [119, 136, 153]\n",
-    "    darkgrey = [169, 169, 169]\n",
-    "    \n",
-    "    # NOTE: USED TO BE -1 BUT CHANGED AS VALUE NEEDED FOR CROSS ENTROPY - CAN'T HAVE 0\n",
-    "    rgb_to_id(new_rgb, threshold, black, 0, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, dimgrey, 0, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, darkslategrey, 0, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, lightgrey, 0, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, gainsboro, 0, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, grey, 0, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, lightslategrey, 0, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, darkgrey, 0, lab)\n",
-    "    \n",
-    "    # Red = OrangeRed\n",
-    "    red = [255,0,0]\n",
-    "    orangered = [255, 69, 0]\n",
-    "    firebrick = [181,17,17]\n",
-    "    \n",
-    "    rgb_to_id(new_rgb, threshold, red, 1, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, orangered, 1, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, firebrick, 1, lab)\n",
-    "    \n",
-    "    # Blue\n",
-    "    blue = [0, 0, 255]\n",
-    "    darkslateblue = [72, 61, 139]\n",
-    "    midnightblue = [25, 25, 112]\n",
-    "    mediumblue = [0, 0, 205]\n",
-    "    \n",
-    "    rgb_to_id(new_rgb, threshold, blue, 2, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, darkslateblue, 2, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, midnightblue, 2, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, mediumblue, 2, lab)\n",
-    "    \n",
-    "    # Purple = Dark Violet = Medium Purple = Darkorchid\n",
-    "    purple = [128,0,128]\n",
-    "    darkviolet = [177,10,255]\n",
-    "    mediumpurple = [147, 112, 219]\n",
-    "    darkorchid = [153, 50, 204]\n",
-    "    \n",
-    "    rgb_to_id(new_rgb, threshold, purple, 3, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, darkviolet, 3, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, mediumpurple, 3, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, darkorchid, 3, lab)\n",
-    "    \n",
-    "    # Green is same as Lime and limegreen\n",
-    "    green = [0,128,0]\n",
-    "    lime = [0,255,0]\n",
-    "    limegreen = [50, 205, 50]\n",
-    "    \n",
-    "    rgb_to_id(new_rgb, threshold, green, 4, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, lime, 4, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, limegreen, 4, lab)\n",
-    "    \n",
-    "    # Orange is same as dark orange\n",
-    "    orange = [255, 165, 0]\n",
-    "    darkorange = [255, 140, 0]\n",
-    "    chocolate = [180,101,24]\n",
-    "    \n",
-    "    rgb_to_id(new_rgb, threshold, orange, 5, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, darkorange, 5, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, chocolate, 5, lab)\n",
-    "    \n",
-    "    # Yellow = Gold\n",
-    "    yellow = [255,255,0]\n",
-    "    gold = [255, 215, 0]\n",
-    "    goldenrod = [218, 165, 32]\n",
-    "    goldenrod2 = [183,178,36]\n",
-    "    darkgoldenrod = [184, 134, 11]\n",
-    "    \n",
-    "    rgb_to_id(new_rgb, threshold, yellow, 6, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, gold, 6, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, goldenrod, 6, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, goldenrod2, 6, lab)\n",
-    "    rgb_to_id(new_rgb, threshold, darkgoldenrod, 6, lab)\n",
-    "    \n",
-    "    # Magenta/Fuschia\n",
-    "    magenta = [255,0,255]\n",
-    "    darkmagenta = [139, 0, 139]\n",
-    "    \n",
-    "    magenta_threshold = 20\n",
-    "    \n",
-    "    rgb_to_id(new_rgb, magenta_threshold, magenta, 7, lab)\n",
-    "    rgb_to_id(new_rgb, magenta_threshold, darkmagenta, 7, lab)\n",
-    "    \n",
-    "#     new_grey = new_rgb\n",
-    "    new_grey = cv2.cvtColor( new_rgb, cv2.COLOR_RGB2GRAY ) # convert image to grayscale\n",
-    "    \n",
-    "    return new_grey\n",
-    "# rgb = ref_colour()\n",
-    "# plt.imshow(rgb)\n",
-    "\n",
-    "def convert_to_id_image(image):\n",
-    "    '''\n",
-    "    convert rgb images to id\n",
-    "    '''\n",
-    "    returned_grey_image = ref_colour(image)\n",
-    "    rows, cols = returned_grey_image.shape\n",
-    "    g_y = np.copy(returned_grey_image)\n",
-    "    for x in range(0, rows):\n",
-    "        for j in range(0,cols):\n",
-    "#             if returned_grey_image[x][j] > 7: # Setting values in the array to void if they're not in labels\n",
-    "#                 returned_grey_image[x][j] = -1 # this created issue with cross_entropy\n",
-    "            if returned_grey_image[x][j] > 7: # Setting values in the array to void if they're not in labels\n",
-    "                g_y[x][j] = 0\n",
-    "    print(np.unique(g_y))\n",
-    "    return g_y\n",
-    "\n",
-    "def convert_to_rgb_image(id_image):\n",
-    "    '''\n",
-    "    Convert id back to rgb \n",
-    "    '''\n",
-    "    rows, cols = id_image.shape\n",
-    "\n",
-    "    black = [0, 0, 0]# id = 0\n",
-    "    red = [255,0,0] # id = 1\n",
-    "    blue = [0, 0, 255] # id = 2\n",
-    "    darkviolet = [177,10,255] # id = 3\n",
-    "    lime = [0,255,0] # id = 4\n",
-    "    darkorange = [255, 140, 0] # id = 5\n",
-    "    yellow = [255, 255, 0] # id = 6\n",
-    "    magenta = [255,0,255] # id = 7\n",
-    "    \n",
-    "    colors = [ black, red, blue, darkviolet, lime, darkorange, yellow, magenta]\n",
-    "    new_image = np.zeros((rows,cols,3))\n",
-    "    for x in range(0, rows):\n",
-    "        for j in range(0,cols):\n",
-    "            pixel_value = int(id_image[x][j])\n",
-    "            if pixel_value > 7: # Setting values in the array to black if they're not in labels\n",
-    "                print(pixel_value)\n",
-    "                new_image[x][j] = black\n",
-    "            else:\n",
-    "                new_image[x][j] = colors[pixel_value] # setting id to colours - values between 1-7\n",
-    "    return new_image.astype(np.uint8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Applying Weighting algorithm to an image\n",
@@ -389,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 0 black\n",
@@ -407,9 +104,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Setting the directories\n",
@@ -422,16 +117,16 @@
     "# wanted_folder = 'Ventricle/'\n",
     "\n",
     "cwd = os.getcwd()\n",
-    "cwd = cwd + '/datasets/OCTData/'+wanted_folder\n",
+    "check_directory = cwd\n",
+    "print(check_directory)\n",
+    "cwd = cwd + '/datasets-24-aug/OCTData/'+wanted_folder\n",
     "print(cwd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "whole_raw_image_folder = cwd + 'whole_raw_image/'\n",
@@ -448,7 +143,7 @@
     "def list_all_files(directory):\n",
     "    from os import listdir\n",
     "    from os.path import isfile, join\n",
-    "    all_labels_files = [f for f in listdir(directory) if isfile(join(directory, f))]\n",
+    "    all_labels_files = [f for f in listdir(directory) if isfile(join(directory, f)) and f != '.DS_Store']\n",
     "    all_labels_files.sort()\n",
     "    return all_labels_files\n",
     "\n",
@@ -460,9 +155,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(files_list[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Creating list of file names\n",
@@ -480,9 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Removing Unwanted Files\n",
@@ -515,9 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(len(unwanted_files))\n",
@@ -535,9 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def segment_image_multiple(image, left_bound, right_bound, split):\n",
@@ -573,9 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Saving images\n",
@@ -669,9 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def remove_files(mydir, ext):\n",
@@ -706,9 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# The values of the conversion by Elsa\n",
@@ -718,9 +408,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Extensions\n",
@@ -776,9 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(files_list[0][54])"
@@ -788,7 +474,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -831,9 +516,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -844,9 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "files = list_all_files(whole_raw_image_folder+'Train/')\n",
@@ -859,9 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# atrium_ids = all_labels_folder+'Train/segmented_ids/'\n",
@@ -884,9 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load h5py raw array\n",
@@ -920,9 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
@@ -951,9 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Creating label.h5 File\n",
@@ -995,9 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Creating set.h5 File\n",
@@ -1026,9 +697,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# N = 50"
@@ -1037,9 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# import torch\n",
@@ -1068,9 +735,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# # Creating label.h5 File\n",
@@ -1113,9 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# # Creating set.h5 File\n",
@@ -1131,7 +794,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (torch)",
+   "display_name": "Python (py3)",
    "language": "python",
    "name": "py3"
   },
